# Sptracing

./: .gitignore  CMakeLists.txt  README.md  Sptracing.sln  Sptracing.vcxproj  Sptracing.vcxproj.filters  main.cpp
Detail/: Camera_F.hpp  Ray3.hpp  Sphere.hpp  Vector.hpp
Detile/: Sphere.hpp  Vector.hpp
Detile/common/: Intersect_result.hpp
